Revision history for {{ $dist->name }}

{{ $NEXT }}

0.004     2015-08-03 13:15:51+09:00 Asia/Seoul
    - Return height, weight, gender and count

0.003     2015-07-31 03:42:01+09:00 Asia/Seoul
    - Remove need-less file

0.002     2015-07-31 02:51:01+09:00 Asia/Seoul
    - Update module dependency: OpenCloset::Schema 0.012

0.001     2015-07-31 02:44:05+09:00 Asia/Seoul
    - first release